Trying to produce an executable